# SkyFire_one

./: .editorconfig  .gitignore  .hgignore  .travis.yml  CMakeLists.txt  COPYING.md  PreLoad.cmake  README  README.md  Simple Project Build Tool.bat  appveyor.yml  editorconfig  revision.h.in.cmake  travis.yml
src/server/collision/: BIH.cpp  BIH.h  BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  CMakeLists.txt  MapTree.h  ModelInstance.cpp  TileAssembler.cpp  VMapDefinitions.h  VMapManager2.cpp  VMapTools.h  WorldModel.cpp  WorldModel.h
src/server/collision/Management/: IVMapManager.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h
src/server/collision/Maps/: MapTree.cpp  MapTree.h  TileAssembler.cpp  TileAssembler.h
src/server/collision/Models/: ModelInstance.cpp  ModelInstance.h  WorldModel.cpp  WorldModel.h
src/server/collision/PrecompiledHeaders/: collisionPCH.cpp  collisionPCH.h
src/server/framework/: CMakeLists.txt
src/server/framework/Dynamic/: FactoryHolder.h  ObjectRegistry.h
src/server/framework/GameSystem/: GridLoader.h  NGrid.h  TypeContainer.h  TypeContainerFunctions.h
src/server/framework/Platform/: Define.h
src/server/framework/Policies/: CreationPolicy.h  ObjectLifeTime.h  ThreadingModel.h
src/server/framework/Utilities/: ByteConverter.h  Callback.h  EventProcessor.cpp  EventProcessor.h  TypeList.h  UnorderedMap.h
src/server/game/: AddonHandler.h  ArenaTeamHandler.cpp  AuctionHouseBot.h  AuctionHouseHandler.cpp  Bag.cpp  BattleGroundBE.h  BattleGroundEY.h  BattleGroundHandler.cpp  BattleGroundMgr.h  CMakeLists.txt  Channel.cpp  ChannelHandler.cpp  CombatAI.h  ConfusedMovementGenerator.h  Creature.h  CreatureAIFactory.h  CreatureAIRegistry.cpp  CreatureAISelector.h  CreatureEventAI.h  CreatureEventAIMgr.cpp  CreatureFormations.cpp  CreatureGroups.h  DBCStores.cpp  DBCStructure.h  DBCfmt.h  DestinationHolder.h  FollowerReference.h  GameEventMgr.cpp  GameEventMgr.h  GameObject.cpp  GossipDef.h  GroupReference.h  Guild.h  GuildHandler.cpp  HostileRefManager.cpp  IdleMovementGenerator.cpp  IdleMovementGenerator.h  InstanceData.h  InstanceSaveMgr.cpp  ItemEnchantmentMgr.cpp  (+69 more)
src/server/game/AI/: CreatureAI.cpp  CreatureAI.h  CreatureAIFactory.h  CreatureAIImpl.h  CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  CreatureAISelector.h
src/server/game/Accounts/: AccountMgr.cpp  AccountMgr.h
src/server/game/Addons/: AddonHandler.cpp  AddonHandler.h  AddonMgr.cpp  AddonMgr.h
src/server/game/AuctionHouse/: AuctionHouseBot.cpp  AuctionHouseBot.h  AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/server/game/Battlegrounds/: ArenaTeam.cpp  ArenaTeam.h  BattleGround.cpp  BattleGround.h  BattleGroundAB.h  BattleGroundAV.h  BattleGroundHandler.cpp  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundNA.cpp  BattleGroundRL.h  BattleGroundWS.cpp  Battleground.cpp  Battleground.h  BattlegroundMgr.cpp  BattlegroundMgr.h
src/server/game/Chat/: Chat.cpp  Chat.h
src/server/game/Combat/: HostileRefManager.cpp  HostileRefManager.h  ThreatManager.cpp  ThreatManager.h  UnitEvents.h
src/server/game/DataStores/: DBCEnums.h  DBCStores.cpp  DBCStores.h  DBCStructure.h  DBCfmt.h
src/server/game/Events/: GameEventMgr.cpp  GameEventMgr.h
src/server/game/Globals/: ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h
src/server/game/Grids/: Grid.h  GridDefines.h  GridLoader.h  GridRefManager.h  GridReference.h  GridStates.cpp  GridStates.h  NGrid.h  ObjectGridLoader.cpp  ObjectGridLoader.h
src/server/game/Groups/: Group.cpp  Group.h  GroupRefManager.h  GroupReference.cpp  GroupReference.h
src/server/game/Guilds/: Guild.cpp  Guild.h
src/server/game/Handlers/: AddonHandler.cpp  AddonHandler.h  ArenaTeamHandler.cpp  AuctionHouseHandler.cpp  BattleGroundHandler.cpp  BattlegroundHandler.cpp  ChannelHandler.cpp  CharacterHandler.cpp  ChatHandler.cpp  CombatHandler.cpp  DuelHandler.cpp  GroupHandler.cpp  GuildHandler.cpp  ItemHandler.cpp  LFGHandler.cpp  LootHandler.cpp  MiscHandler.cpp  MovementHandler.cpp  NPCHandler.cpp  NPCHandler.h  PetHandler.cpp  PetitionsHandler.cpp  QueryHandler.cpp  QuestHandler.cpp  SkillHandler.cpp  SpellHandler.cpp  TaxiHandler.cpp  TicketHandler.cpp  TradeHandler.cpp  VoiceChatHandler.cpp
src/server/game/Instances/: InstanceData.cpp  InstanceData.h  InstanceSaveMgr.cpp  InstanceSaveMgr.h  InstanceScript.cpp  InstanceScript.h  ScriptedInstance.h
src/server/game/Loot/: LootMgr.cpp  LootMgr.h
src/server/game/Mails/: Mail.cpp  Mail.h
src/server/game/Maps/: Map.cpp  Map.h  MapInstanced.cpp  MapInstanced.h  MapManager.cpp  MapManager.h  MapRefManager.h  MapReference.h  MapUpdater.cpp  MapUpdater.h  ZoneScript.h
src/server/game/Miscellaneous/: Formulas.h  Language.h  SharedDefines.h
src/server/game/Movement/: DestinationHolder.cpp  DestinationHolder.h  DestinationHolderImp.h  FollowerRefManager.h  FollowerReference.cpp  FollowerReference.h  MotionMaster.cpp  MotionMaster.h  MovementGenerator.cpp  MovementGenerator.h  MovementGeneratorImpl.h  Traveller.h
src/server/game/OutdoorPvP/: OutdoorPvP.cpp  OutdoorPvP.h  OutdoorPvPMgr.cpp  OutdoorPvPMgr.h
src/server/game/Pools/: PoolMgr.cpp  PoolMgr.h
src/server/game/PrecompiledHeaders/: gamePCH.cpp  gamePCH.h
src/server/game/Quests/: QuestDef.cpp  QuestDef.h
src/server/game/Reputation/: ReputationMgr.cpp  ReputationMgr.h
src/server/game/Scripting/: MapScripts.cpp  ScriptLoader.cpp  ScriptLoader.h  ScriptMgr.cpp  ScriptMgr.h  ScriptSystem.cpp  ScriptSystem.h
src/server/game/Server/: WorldSession.cpp  WorldSession.h  WorldSocket.cpp  WorldSocket.h  WorldSocketMgr.cpp  WorldSocketMgr.h
src/server/game/Skills/: SkillDiscovery.cpp  SkillDiscovery.h  SkillExtraItems.cpp  SkillExtraItems.h
src/server/game/Spells/: Spell.cpp  Spell.h  SpellEffects.cpp  SpellMgr.cpp  SpellMgr.h
src/server/oregoncore/: CMakeLists.txt  CliRunnable.cpp  Main.cpp  Master.cpp  OregonCore.rc  RARunnable.cpp  RARunnable.h  RASocket.cpp  RASocket.h  WorldRunnable.cpp  WorldRunnable.h
src/server/scripts/: CMakeLists.txt
(+2688 files in other folders)
